# arctic-tern

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
arctic-tern/: migrate.py
arctic_tern/: __init__.py  _migrate_psycopg.py  filename.py  migrate.py
tests/: test_filename.py  test_migrate.py  test_migrate_async.py  test_migrate_psyco.py
tests/scripts/: 1.sql  2-add-apartment.sql  3-fail.sql
