[tool.poetry]
name = "arctic_tern"
version = "0.2.0"
description = "SQL migrations for python and postgres"
authors = ["Eric Grunzke <eric@grunzke.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ConvergysLabs/arctic-tern"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = { version = "^2.7", optional = true }
asyncpg = { version = "^0.20.1", optional = true }

[tool.poetry.extras]
asyncpg = ["asyncpg"]
psycopg = ["psycopg2"]

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-asyncio = "^0.12"
pytest-cov = "^2.8"
codecov = "^2.1"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.black]
line-length = 88
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
